fix: no scale of category on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -392,9 +392,4 @@ main {
         width: 120px;
     }
 
-    .category_box {
-        scale: 1.2;
-
-    }
-
 }
